FrontEnd/Tree/Grammatic.txt
Tree       ::= Condition '$'
Condition  :: 'if' '(' AddSub ')' '{' Assign '}'
Assign     ::= Name '=' AddSub ';'
AddSub     ::= MulDiv { ['+' '-'] MulDiv } *
MulDiv     ::= Pow { ['*' '/'] Pow } *
Pow        ::= Func { '^' Func } *
Func       ::= Minus | Bracket | { Ln | Sin | .. | Arccos }

Minus      ::= '-' MulDiv

Ln         :: 'ln'      '(' AddSub ')'
Sin        :: 'sin'     '(' AddSub ')'
Cos        :: 'cos'     '(' AddSub ')'
...
Arccos     ::= 'arccos' '(' AddSub ')'

Bracket    ::= '(' Func ')' | Name | Number
Name       ::= [letter] {       [letter/number] } *
Number     ::= ['0' - '9'] +
